--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Michael Harp
-description: Welcome to my personal website.
+description: Hi, I'm Michael Harp.
 theme: jekyll-theme-cayman
 show_downloads: false
